--- a/index.html
+++ b/index.html
@@ -212,9 +212,7 @@
             <div class="card-body">
               <h5 class="card-title">Hanif</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/hanifchanz__?igsh=bDgxMXhuZ2M0ZDJ6"
@@ -235,9 +233,7 @@
             <div class="card-body">
               <h5 class="card-title">Ade</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/adeapriliasafitri?igsh=MXB0NHJ2ZG5wZG92eQ=="
