Beneri Codingan Hakim (Lagi)

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <br />
     <br />
 
-    <!--classmates-->
+    <!--CLASSMATES-->
     <!-- ENJOY QEY 200 LINE WKWKWKWK -->
     <!-- ROW 1 -->
     <div class="container" id="classmates">
@@ -254,9 +254,7 @@
             <div class="card-body">
               <h5 class="card-title">Hakim</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/akmckpp?igsh=MXM5Z2E5dTJlcXk1Nw=="
@@ -277,9 +275,7 @@
             <div class="card-body">
               <h5 class="card-title">Arqeysa</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/arqyza?igsh=eWd5Y2FsOXM5ZXFz"
@@ -300,9 +296,7 @@
             <div class="card-body">
               <h5 class="card-title">Danuar</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/resantodanuar35?igsh=MWg2d3o5bmd0dWk2eQ=="
@@ -323,9 +317,7 @@
             <div class="card-body">
               <h5 class="card-title">Diah</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/dip.tw?igsh=MXA1N2hmYnhmNmNyOQ=="
@@ -352,9 +344,7 @@
             <div class="card-body">
               <h5 class="card-title">Dinda</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/dinda_delaa?igsh=MXFpZjl3dnU3N3pldQ=="
@@ -375,9 +365,7 @@
             <div class="card-body">
               <h5 class="card-title">Dini</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/scndchceee_?igsh=bTduMTcyam55czUw"
@@ -398,9 +386,7 @@
             <div class="card-body">
               <h5 class="card-title">Vemi</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/dwivemi_aryani?igsh=aWc3dW5uZ3l3bTB2"
@@ -421,9 +407,7 @@
             <div class="card-body">
               <h5 class="card-title">Elona</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/elonarsy?igsh=bWYxMjlneHFrb25h"
@@ -444,9 +428,7 @@
             <div class="card-body">
               <h5 class="card-title">Fadhli</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/fadh.36?igsh=dmNrM2ppNzJuZzht"
@@ -467,9 +449,7 @@
             <div class="card-body">
               <h5 class="card-title">Iga</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/iga.mwr?igsh=MWl2azJpamFhNWpudQ=="
@@ -483,9 +463,9 @@
             </div>
           </div>
         </div>
-        <br />
       </div>
     </div>
+    <br />
 
     <!-- ROW 3 -->
     <div class="container">
@@ -496,9 +476,7 @@
             <div class="card-body">
               <h5 class="card-title">Agung</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/yogaa1.__?igsh=MnJ4ejR1Nnl4eGE2"
@@ -519,9 +497,7 @@
             <div class="card-body">
               <h5 class="card-title">Mayang</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/myngptr.lrsti?igsh=MThiYWp3aGQ5MWZmbw=="
@@ -542,9 +518,7 @@
             <div class="card-body">
               <h5 class="card-title">Atha</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/athamufidd?igsh=MW9obWIybDVibXBnOA=="
@@ -565,9 +539,7 @@
             <div class="card-body">
               <h5 class="card-title">Iqbal</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/iqbalsyarief_?igsh=MWF3b2R6aDh6aGNnbw=="
@@ -588,9 +560,7 @@
             <div class="card-body">
               <h5 class="card-title">Raihan</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/karldenza?igsh=OXF0amgwb3dycGJh"
@@ -611,9 +581,7 @@
             <div class="card-body">
               <h5 class="card-title">Zacky</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/mhdzkyy05?igsh=dXhmYmRqMzhqMmFq"
@@ -627,9 +595,9 @@
             </div>
           </div>
         </div>
-        <br />
       </div>
     </div>
+    <br />
 
     <!-- ROW 4 -->
     <div class="container">
@@ -640,9 +608,7 @@
             <div class="card-body">
               <h5 class="card-title">Muthia</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/muthi.aa0?igsh=bTYwNGdzbWFvNnRn"
@@ -663,9 +629,7 @@
             <div class="card-body">
               <h5 class="card-title">Raden</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/raiden_x420?igsh=ZnBlN2sxcmVtMnFv"
@@ -686,9 +650,7 @@
             <div class="card-body">
               <h5 class="card-title">Reva</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/vaapriyani_?igsh=OXFzcDNhMTVjc2hu"
@@ -708,10 +670,7 @@
             <img src="img/sartek.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title">Satria</h5>
-              <p class="card-text">
-                AKU KAYA<br />
-                AKU KAYA
-              </p>
+              <p class="card-text pt-1">AKU KAYA</p>
             </div>
           </div>
         </div>
@@ -723,9 +682,7 @@
             <div class="card-body">
               <h5 class="card-title">Sintia</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/sintiaacna_?igsh=MXFhYW84dTdneWRxcg=="
@@ -746,9 +703,7 @@
             <div class="card-body">
               <h5 class="card-title">Siti</h5>
               <p class="card-text">
-                <i class="bi bi-instagram"></i>
-                <span class="fw-bold">Instagram</span>
-                <br />
+                <span class="bi bi-instagram"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/khodijah_caa?igsh=MXJyaDZ5YmVrMGk5Ng=="
