--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="container pt-5" id="about">
       <div class="row">
         <div class="col-md-6">
-          <div class="p-4 border rounded shadow bg-light">
+          <div class="p-4 borderUngu rounded shadow bg-transparent putih">
             <!-- BAGIAN PARAGRAF DALAM BOX -->
             <p>
               Hi, there👋🏻! <br />
@@ -191,7 +191,7 @@
         </div>
         <div class="col-md-6">
           <img
-            class="fotosekelas img-fluid d-block d-sm-flex rounded shadow"
+            class="fotosekelas img-fluid d-block d-sm-flex rounded shadow borderUngu"
             src="/img/1CA.JPG"
             alt="Foto Sekelas"
           />
@@ -207,12 +207,12 @@
     <div class="container" id="classmates">
       <div class="row text-center d-block d-sm-flex">
         <div class="col mb-3">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/1.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Hanif</h5>
+              <h5 class="card-title putih">Hanif</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/hanifchanz__?igsh=bDgxMXhuZ2M0ZDJ6"
