Ubah bg-card Classmates

--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/2.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Ade</h5>
+              <h5 class="card-title putih">Ade</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/adeapriliasafitri?igsh=MXB0NHJ2ZG5wZG92eQ=="
@@ -249,12 +249,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/3.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Hakim</h5>
+              <h5 class="card-title putih">Hakim</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/akmckpp?igsh=MXM5Z2E5dTJlcXk1Nw=="
@@ -270,12 +270,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/4.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Arqeysa</h5>
+              <h5 class="card-title putih">Arqeysa</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/arqyza?igsh=eWd5Y2FsOXM5ZXFz"
@@ -291,12 +291,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/5.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Danuar</h5>
+              <h5 class="card-title putih">Danuar</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/resantodanuar35?igsh=MWg2d3o5bmd0dWk2eQ=="
@@ -312,12 +312,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/6.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Diah</h5>
+              <h5 class="card-title putih">Diah</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/dip.tw?igsh=MXA1N2hmYnhmNmNyOQ=="
@@ -339,12 +339,12 @@
     <div class="container">
       <div class="row text-center d-block d-sm-flex">
         <div class="col mb-3">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/7.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Dinda</h5>
+              <h5 class="card-title putih">Dinda</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/dinda_delaa?igsh=MXFpZjl3dnU3N3pldQ=="
@@ -360,12 +360,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/8.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Dini</h5>
+              <h5 class="card-title putih">Dini</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/scndchceee_?igsh=bTduMTcyam55czUw"
@@ -381,12 +381,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/9.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Vemi</h5>
+              <h5 class="card-title putih">Vemi</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/dwivemi_aryani?igsh=aWc3dW5uZ3l3bTB2"
@@ -402,12 +402,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/10.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Elona</h5>
+              <h5 class="card-title putih">Elona</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/elonarsy?igsh=bWYxMjlneHFrb25h"
@@ -423,12 +423,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/11.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Fadhli</h5>
+              <h5 class="card-title putih">Fadhli</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/fadh.36?igsh=dmNrM2ppNzJuZzht"
@@ -444,12 +444,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/12.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Iga</h5>
+              <h5 class="card-title putih">Iga</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/iga.mwr?igsh=MWl2azJpamFhNWpudQ=="
@@ -471,12 +471,12 @@
     <div class="container">
       <div class="row text-center d-block d-sm-flex">
         <div class="col mb-3">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/13.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Agung</h5>
+              <h5 class="card-title putih">Agung</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/yogaa1.__?igsh=MnJ4ejR1Nnl4eGE2"
@@ -492,12 +492,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/14.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Mayang</h5>
+              <h5 class="card-title putih">Mayang</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/myngptr.lrsti?igsh=MThiYWp3aGQ5MWZmbw=="
@@ -513,12 +513,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/15.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Atha</h5>
+              <h5 class="card-title putih">Atha</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/athamufidd?igsh=MW9obWIybDVibXBnOA=="
@@ -534,12 +534,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/16.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Iqbal</h5>
+              <h5 class="card-title putih">Iqbal</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/iqbalsyarief_?igsh=MWF3b2R6aDh6aGNnbw=="
@@ -555,12 +555,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/17.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Raihan</h5>
+              <h5 class="card-title putih">Raihan</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/karldenza?igsh=OXF0amgwb3dycGJh"
@@ -576,12 +576,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/18.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Zacky</h5>
+              <h5 class="card-title putih">Zacky</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/mhdzkyy05?igsh=dXhmYmRqMzhqMmFq"
@@ -603,12 +603,12 @@
     <div class="container">
       <div class="row text-center d-block d-sm-flex">
         <div class="col mb-3">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/19.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Muthia</h5>
+              <h5 class="card-title  putih">Muthia</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/muthi.aa0?igsh=bTYwNGdzbWFvNnRn"
@@ -624,12 +624,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/20.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Raden</h5>
+              <h5 class="card-title putih">Raden</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/raiden_x420?igsh=ZnBlN2sxcmVtMnFv"
@@ -645,12 +645,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/21.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Reva</h5>
+              <h5 class="card-title putih">Reva</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/vaapriyani_?igsh=OXFzcDNhMTVjc2hu"
@@ -666,23 +666,23 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="img/sartek.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Satria</h5>
-              <p class="card-text pt-1">AKU KAYA</p>
+              <h5 class="card-title putih">Satria</h5>
+              <p class="card-text pt-1 putih">AKU KAYA</p>
             </div>
           </div>
         </div>
         <br />
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/22.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Sintia</h5>
+              <h5 class="card-title putih">Sintia</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/sintiaacna_?igsh=MXFhYW84dTdneWRxcg=="
@@ -698,12 +698,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card">
+          <div class="card bg-transparent">
             <img src="/img/23.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title">Siti</h5>
+              <h5 class="card-title putih">Siti</h5>
               <p class="card-text">
-                <span class="bi bi-instagram"></span>
+                <span class="bi bi-instagram putih"></span>
                 <a
                   class="linkContact"
                   href="https://www.instagram.com/khodijah_caa?igsh=MXJyaDZ5YmVrMGk5Ng=="
