bg-card atmin jugak

--- a/index.html
+++ b/index.html
@@ -107,45 +107,45 @@
       <div class="container">
         <div class="row text-center d-block d-sm-flex">
           <div class="col">
-            <div class="card">
+            <div class="card bg-transparent borderUngu">
               <img
                 src="/img/Ganteng.JPG"
                 class="card-img-top"
                 alt="Foto Ganteng"
               />
               <div class="card-body">
-                <h5 class="card-title">Hanif chann</h5>
-                <p class="card-text">Ak admin</p>
+                <h5 class="card-title putih">Hanif chann</h5>
+                <p class="card-text putih">Ak admin</p>
               </div>
             </div>
           </div>
           <br />
           <div class="col">
-            <div class="card">
+            <div class="card bg-transparent borderUngu">
               <img src="/img/Diah.JPG" class="card-img-top" alt="Foto Diah" />
               <div class="card-body">
-                <h5 class="card-title">Diah Pratwa</h5>
-                <p class="card-text">Admin jg</p>
+                <h5 class="card-title putih">Diah Pratwa</h5>
+                <p class="card-text putih">Admin jg</p>
               </div>
             </div>
           </div>
           <br />
           <div class="col">
-            <div class="card">
+            <div class="card bg-transparent borderUngu">
               <img src="/img/Qey.JPG" class="card-img-top" alt="Foto Qey" />
               <div class="card-body">
-                <h5 class="card-title">Nayla</h5>
-                <p class="card-text">Admin admin</p>
+                <h5 class="card-title putih">Nayla</h5>
+                <p class="card-text putih">Admin admin</p>
               </div>
             </div>
           </div>
           <br />
           <div class="col">
-            <div class="card">
+            <div class="card bg-transparent borderUngu">
               <img src="/img/Al.JPG" class="card-img-top" alt="Foto Hakim" />
               <div class="card-body">
-                <h5 class="card-title">Kimbap</h5>
-                <p class="card-text">Beban</p>
+                <h5 class="card-title putih">Kimbap</h5>
+                <p class="card-text putih">Beban</p>
               </div>
             </div>
           </div>
