--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="container">
         <div class="row text-center d-block d-sm-flex">
           <div class="col">
-            <div class="card">
+            <div class="card rotateKanan">
               <img
                 src="/img/Ganteng.JPG"
                 class="card-img-top"
@@ -121,7 +121,7 @@
           </div>
           <br />
           <div class="col">
-            <div class="card">
+            <div class="card rotateKiri">
               <img src="/img/Diah.JPG" class="card-img-top" alt="Foto Diah" />
               <div class="card-body">
                 <h5 class="card-title">Diah Pratwa</h5>
@@ -131,7 +131,7 @@
           </div>
           <br />
           <div class="col">
-            <div class="card">
+            <div class="card rotateKanan">
               <img src="/img/Qey.JPG" class="card-img-top" alt="Foto Qey" />
               <div class="card-body">
                 <h5 class="card-title">Nayla</h5>
@@ -141,11 +141,11 @@
           </div>
           <br />
           <div class="col">
-            <div class="card">
+            <div class="card rotateHakim">
               <img src="/img/Al.JPG" class="card-img-top" alt="Foto Hakim" />
               <div class="card-body">
-                <h5 class="card-title">Kimbap</h5>
-                <p class="card-text">Beban</p>
+                <h5 class="card-title teksHakim">Kimbap</h5>
+                <p class="card-text teksHakim">Beban</p>
               </div>
             </div>
           </div>
