--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
           <div class="card bg-transparent">
             <img src="/img/19.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
-              <h5 class="card-title  putih">Muthia</h5>
+              <h5 class="card-title putih">Muthia</h5>
               <p class="card-text">
                 <span class="bi bi-instagram putih"></span>
                 <a
@@ -670,7 +670,13 @@
             <img src="img/sartek.jpg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title putih">Satria</h5>
-              <p class="card-text pt-1 putih">AKU KAYA</p>
+              <p class="card-text pt-1">
+                <a
+                  href="https://youtu.be/dQw4w9WgXcQ?si=ZZBWndNCL03iMqkz"
+                  class="linkContact"
+                  >AKU KAYA</a
+                >
+              </p>
             </div>
           </div>
         </div>
