Animasi + Foto Row 1 Classmates

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
           <br />
           <div class="col">
-            <div class="card bg-transparent borderUngu rotateKiri">
+            <div class="card bg-transparent borderUngu rotateKanan">
               <img src="/img/Diah.JPG" class="card-img-top" alt="Foto Diah" />
               <div class="card-body">
                 <h5 class="card-title putih">Diah Pratwa</h5>
@@ -207,8 +207,12 @@
     <div class="container" id="classmates">
       <div class="row text-center d-block d-sm-flex">
         <div class="col mb-3">
-          <div class="card bg-transparent">
-            <img src="/img/1.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/1.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Hanif</h5>
               <p class="card-text">
@@ -228,8 +232,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/2.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/2.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Ade</h5>
               <p class="card-text">
@@ -249,8 +257,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/3.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/3.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Hakim</h5>
               <p class="card-text">
@@ -270,8 +282,12 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/4.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0">
+            <img
+              src="/img/4.svg"
+              class="card-img-top rotateKanan"
+              alt="penghuni 2CA"
+            />
             <div class="card-body">
               <h5 class="card-title putih">Arqeysa</h5>
               <p class="card-text">
@@ -291,8 +307,8 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/5.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0 rotateKanan">
+            <img src="/img/5.svg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title putih">Danuar</h5>
               <p class="card-text">
@@ -312,8 +328,8 @@
         </div>
         <br />
         <div class="col">
-          <div class="card bg-transparent">
-            <img src="/img/6.jpg" class="card-img-top" alt="penghuni 2CA" />
+          <div class="card bg-transparent border-0 rotateKanan">
+            <img src="/img/6.svg" class="card-img-top" alt="penghuni 2CA" />
             <div class="card-body">
               <h5 class="card-title putih">Diah</h5>
               <p class="card-text">
